--- a/spalpuGitHub/Content/Site.css
+++ b/spalpuGitHub/Content/Site.css
@@ -1,27 +1,90 @@
 ﻿/*Начало Определение переменных LESS*/
-/*Фон главного меню*/
-/*Цвет наведенной ссылки*/
+/*Фон Tree*/
+/*Фон активной ссылки*/
 /*Конец Определение переменных LESS*/
-body {
-  padding-top: 50px;
-  padding-bottom: 20px;
-  background-color: #e7e493;
+/*Начало Общие*/
+#wrapper {
+  width: 100%;
 }
-/* Set padding to keep content from hitting the edges */
-.body-content {
-  padding-left: 15px;
-  padding-right: 15px;
+#wrapper a,
+#wrapper a:hover {
+  text-decoration: none;
+  /*Убрать подчеркивание у ссылок*/
 }
-/* Override the default bootstrap behavior where horizontal description lists 
-   will truncate terms that are too long to fit in the left column 
-*/
-.dl-horizontal dt {
-  white-space: normal;
+/*Конец Общие*/
+/*Начало плагина metisMenu*/
+#menu {
+  margin: 0;
+  padding-left: 10px;
 }
-/* Set width on the form input elements since they're 100% wide by default */
-input,
-select,
-textarea {
-  max-width: 280px;
+#menu,
+#menu ul {
+  list-style: none;
 }
+#menu a {
+  position: relative;
+  display: block;
+  padding: 4px 10px 4px 0;
+}
+#menu a:hover {
+  background-color: #eee;
+}
+.arrow {
+  float: right;
+}
+.glyphicon.arrow:before {
+  content: "\e079";
+}
+.active > a > .glyphicon.arrow:before {
+  content: "\e114";
+}
+.fa.arrow:before {
+  content: "\f104";
+}
+.active > a > .fa.arrow:before {
+  content: "\f107";
+}
+.plus-times {
+  float: right;
+}
+.fa.plus-times:before {
+  content: "\f067";
+}
+.active > a > .fa.plus-times {
+  filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=1);
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+.plus-minus {
+  float: right;
+}
+.fa.plus-minus:before {
+  content: "\f067";
+}
+.active > a > .fa.plus-minus:before {
+  content: "\f068";
+}
+/*Конец плагина metisMenu*/
+/*Начало Header*/
+/*Конец Header*/
+/*Начало Колонка Aside*/
+aside {
+  position: absolute;
+  width: 250px;
+  z-index: 1;
+  background-color: #f8f8f8;
+  min-height: 990px;
+}
+aside h4 {
+  font-size: 22px;
+  padding-left: 10px;
+}
+/*Конец Колонка Aside*/
+/*Начало Колонка Article*/
+/*Конец Колонка Article*/
+/*Начало Footer*/
+/*Конец Footer*/
 /*# sourceMappingURL=Site.css.map */
