Верска Работает Ajax Загружены фото

--- a/spalpuGitHub/Content/Site.css
+++ b/spalpuGitHub/Content/Site.css
@@ -1,6 +1,6 @@
 ﻿/*Начало Определение переменных LESS*/
 /*Фон Tree*/
-/*Фон активной ссылки*/
+/*Фон активного блока*/
 /*Конец Определение переменных LESS*/
 /*Начало Общие*/
 #wrapper {
@@ -84,6 +84,9 @@ aside h4 {
 }
 /*Конец Колонка Aside*/
 /*Начало Колонка Article*/
+article {
+  margin-left: 250px;
+}
 /*Конец Колонка Article*/
 /*Начало Footer*/
 /*Конец Footer*/
