--- a/spalpuGitHub/Views/Home/Index.cshtml
+++ b/spalpuGitHub/Views/Home/Index.cshtml
@@ -1,11 +1,11 @@
 ﻿@{
     ViewBag.Title = "СФА";
 }
-@section tree{
+@section aside{
     @Html.Partial("_TreePartial")
 }
-@section content{
-
+@section article{
+    @Html.Partial("LifeGo/_main")
 }
 @section scripts{
     <script type="text/javascript">
