--- a/spalpuGitHub/Views/Home/_TreePartial.cshtml
+++ b/spalpuGitHub/Views/Home/_TreePartial.cshtml
@@ -10,7 +10,7 @@
 <h4>@Ajax.ActionLink("Жизнь - это Движение", "Index", "Home", new { strpage = "LifeGo/_lifego" }, ajaxopts)</h4>
 <ul id="menu">
     <li class="active">
-        @Ajax.RawActionLink("Здоровье <span class='fa arrow'></span>", "Index", "Home", new { strpage = "LifeGo/_osteochondrosis" }, ajaxopts, null)
+        @Ajax.RawActionLink("Здоровье <span class='fa arrow'></span>", "Index", "Home", new { strpage = "LifeGo/_smailphilosophy" }, ajaxopts, null)
         <ul>
             <li>@Ajax.ActionLink("Остеохондроз", "Index", "Home", new { strpage = "LifeGo/_osteochondrosis" }, ajaxopts)</li>
             <li>@Ajax.ActionLink("Наши Мышцы", "Index", "Home", new { strpage = "LifeGo/_mysshtsy" }, ajaxopts)</li>
