--- a/spalpuGitHub/Views/Shared/_Layout.cshtml
+++ b/spalpuGitHub/Views/Shared/_Layout.cshtml
@@ -18,15 +18,13 @@
             @RenderSection("aside")
         </aside>
         <article>
-            <div class="container-fluid">
                 <div class="row">
-                    <div class="col-lg-10 col-md-offset-1">
+                    <div class="col-lg-12">
                         <div class="panel panel-default">
                             @RenderSection("article")
                         </div>
                     </div>
                 </div>
-            </div>
         </article>
         <footer>
             @Html.Partial("_footer")
