--- a/spalpuGitHub/Views/Shared/_header.cshtml
+++ b/spalpuGitHub/Views/Shared/_header.cshtml
@@ -8,8 +8,8 @@
 
         <div class="navbar-header">
             <a class="navbar-brand" href="#">CИСТЕМА ФИЗИЧЕСКОЙ АКТИВНОСТИ</a>
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                <span class="sr-only">Toggle navigation</span>
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="sr-only">Включить навигацию</span>
 
                 <!-- Набор иконок для кнопки -->
 
@@ -53,3 +53,5 @@
     <!-- /.container-fluid -->
 </nav>
 <img src="~/Content/images/header3.jpg" id="img_header"/>
+@*<img src="~/Content/images/header2.jpg" id="img_header" />*@
+@*<img src="~/Content/images/header.png"  id="img_header"/>*@
