--- a/spalpuGitHub/Content/Site.less
+++ b/spalpuGitHub/Content/Site.less
@@ -28,8 +28,17 @@
 .navbar-toggle {
     border-color: @color_font;
 }
-.icon-bar{
+
+.icon-bar {
     border: 1px solid @color_font;
+}
+
+#fon1:hover, #fon2:hover, #fon3:hover, #fon4:hover, #fon5:hover, #fon6:hover {
+    background-color: #fff;
+}
+
+#fon1:visited , #fon2:visited, #fon3:visited, #fon4:visited, #fon5:visited, #fon6:visited {
+    background-color: #fff;
 }
 /*Конец Навигационное меню*/
 
@@ -129,16 +138,14 @@
     content: "\f068";
 }
 /*Конец плагина metisMenu*/
+
+/*Начало Header*/
 #img_header {
     margin-top: -15px;
     margin-bottom: 20px;
     width: 100%;
 }
-/*Начало Header*/
-
 /*Конец Header*/
-
-
 
 /*Начало Колонка Aside*/
 aside {
@@ -154,6 +161,7 @@ aside h4 {
     padding-left: 10px;
 }
 /*Конец Колонка Aside*/
+
 /*Начало Колонка Article*/
 article {
     margin-left: 270px;
@@ -165,6 +173,9 @@ article {
     padding: 0 20px;
 }
 /*Конец Колонка Article*/
+
 /*Начало Footer*/
+
 /*Конец Footer*/
-/*# sourceMappingURL=Site.css.map */
+
+
