--- a/spalpuGitHub/Views/Shared/_header.cshtml
+++ b/spalpuGitHub/Views/Shared/_header.cshtml
@@ -23,10 +23,10 @@
         <div class="collapse navbar-collapse">
 
             <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Главная</a></li>
-                <li><a href="#">Видео</a></li>
+                <li class="active"><a href="#" id="fon1">Главная</a></li>
+                <li><a href="#" id="fon2">Видео</a></li>
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Разное<span class="caret"></span></a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" id="fon3">Разное<span class="caret"></span></a>
                     <ul class="dropdown-menu" role="menu">
                         <li><a href="#">ЛПУ</a></li>
                         <li><a href="#">О нас</a></li>
@@ -37,14 +37,14 @@
                         <li><a href="#">Еще нужное</a></li>
                     </ul>
                 </li>
-                <li><a href="#">Контакты</a></li>
+                <li><a href="#" class="nab" id="fon4">Контакты</a></li>
             </ul>
 
 
 
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="#">Вход</a></li>
-                <li><a href="#">Регистрация</a></li>
+                <li><a href="#" id="fon5">Вход</a></li>
+                <li><a href="#" id="fon6">Регистрация</a></li>
             </ul>
 
         </div>
