--- a/spalpuGitHub/Views/Shared/_header.cshtml
+++ b/spalpuGitHub/Views/Shared/_header.cshtml
@@ -7,7 +7,7 @@
         <!-- Блок с кнопкой "Brand" и кнопкой для развертывания меню (для мобильных устройств) -->
 
         <div class="navbar-header">
-            <a class="navbar-brand" href="#">CИСТЕМА ФИЗИЧЕСКОЙ АКТИВНОСТИ</a>
+            @Html.ActionLink("CИСТЕМА ФИЗИЧЕСКОЙ АКТИВНОСТИ", "Index", "Home", new {@class="navbar-brand"})
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                 <span class="sr-only">Включить навигацию</span>
 
