--- a/spalpuGitHub/Views/Home/_TreePartial.cshtml
+++ b/spalpuGitHub/Views/Home/_TreePartial.cshtml
@@ -7,7 +7,7 @@
         HttpMethod = "GET"
     };
 }
-<h4>@Ajax.ActionLink("Жизнь - это Движение", "Index", "Home", new { strpage = "LifeGo/_lifego" }, ajaxopts)</h4>
+<h4>@Ajax.ActionLink("Жизнь - это Движение", "Index", "Home", new { strpage = "LifeGo/_lifego" }, ajaxopts, null)</h4>
 <ul id="menu">
     <li class="active">
         @Ajax.RawActionLink("Здоровье <span class='fa arrow'></span>", "Index", "Home", new { strpage = "LifeGo/_smailphilosophy" }, ajaxopts, null)
