--- a/spalpuGitHub/Content/Site.css
+++ b/spalpuGitHub/Content/Site.css
@@ -1,18 +1,38 @@
 ﻿/*Начало Определение переменных LESS*/
+/*Фон body*/
 /*Фон aside*/
 /*Фон aside при наведениии*/
-/*Цвет шрифта в article и вперед, назад(контент)*/
-/*Цвет шрифта наведенной ссылки*/
+/*Цвет шрифта в article*/
+/*Цвет шрифта наведенной ссылки(стрелок вперед, назад)*/
+/*Цвет шрифта стрелок вперед, назад*/
 /*Цвет фона стрелок вперед, назад*/
 /*Цвет кнопки для мобильных - бордюра и трех полосок*/
 /*Конец Определение переменных LESS*/
 /*Начало Шрифты для сайта*/
-/*Конец Шрифты для сайта*/
+body {
+  /*background: url(images/page.jpg);*/
+  /*Общий фон на странице*/
+  /*background-attachment: fixed;*/
+  /*Фиксация фона*/
+  /*background-color: @background_body;*/
+  font-size: 170%;
+}
+article {
+  font-size: 100%;
+}
+/*Конец Шрифты и фон для сайта*/
 /*Начало Общие*/
 #wrapper {
   max-width: 1170px;
   min-width: 280px;
   margin: 0 auto;
+  background-color: #fff;
+  padding: 0 20px;
+  margin-top: 20px;
+  border-radius: 20px 20px 0 0;
+  -moz-border-radius: 20px 20px 0 0;
+  -webkit-border-radius: 20px 20px 0 0;
+  -khtml-border-radius: 20px 20px 0 0;
 }
 #wrapper a,
 #wrapper a:hover {
@@ -27,22 +47,13 @@
 .icon-bar {
   border: 1px solid #428bca;
 }
-#fon1:hover,
-#fon2:hover,
-#fon3:hover,
-#fon4:hover,
-#fon5:hover,
-#fon6:hover {
-  background-color: #fff;
+/*#fon1:hover, #fon2:hover, #fon3:hover, #fon4:hover, #fon5:hover, #fon6:hover {
+    background-color: #fff;
 }
-#fon1:visited,
-#fon2:visited,
-#fon3:visited,
-#fon4:visited,
-#fon5:visited,
-#fon6:visited {
-  background-color: #fff;
-}
+
+#fon1:visited, #fon2:visited, #fon3:visited, #fon4:visited, #fon5:visited, #fon6:visited {
+    background-color: #fff;
+}*/
 /*Конец Навигационное меню*/
 /*Начало Стрелки Вперед Назад*/
 #loadcontent a.forward,
@@ -50,12 +61,16 @@ a.back {
   display: block;
   height: 30px;
   width: 50%;
-  background-color: #588fb4;
-  color: #333333;
+  background-color: #add1e5;
+  color: #808080;
   text-align: center;
   line-height: 30px;
   font-weight: bold;
   margin-bottom: 20px;
+  border-radius: 10px;
+  -moz-border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -khtml-border-radius: 10px;
 }
 #loadcontent a.back {
   float: left;
@@ -64,7 +79,7 @@ a.back {
   float: right;
 }
 #loadcontent a:hover {
-  color: #e8c0a0;
+  color: #2eb528;
 }
 .first_back {
   visibility: hidden;
@@ -138,6 +153,9 @@ aside {
   position: absolute;
   width: 250px;
   z-index: 1;
+  margin-left: 0 20px;
+}
+aside .panel-default {
   background-color: #f8f8f8;
 }
 aside h4 {
@@ -151,9 +169,7 @@ article {
   margin-bottom: 0;
   font-weight: 100;
   font-family: Lucida Console, Monaco5, monospace;
-  font-size: large;
-  color: #333333;
-  padding-top: 0;
+  color: #0d49a8;
 }
 article h1 {
   margin-top: 0;
@@ -188,6 +204,26 @@ article .rightalign {
   padding-bottom: 30px;
 }
 /*Конец Колонка Article*/
-/*Начало Footer*/
-/*Конец Footer*/
+/*Начало блока footer*/
+footer {
+  clear: both;
+  width: 100%;
+  height: 33px;
+  background-color: #c1c4c2;
+  border-radius: 0px 0px 20px 20px;
+  -moz-border-radius: 0px 0px 20px 20px;
+  -webkit-border-radius: 0px 0px 20px 20px;
+  -khtml-border-radius: 0px 0px 20px 20px;
+}
+footer p {
+  text-align: center;
+  padding-top: 7px;
+}
+/*footer span {
+        font-family: Courier New, Courier, monospace;
+        font-size: 1.1em;
+        font-style: oblique;
+    }*/
+/*Было: <span>.vebner.ru</span>*/
+/*Конец блока footer*/
 /*# sourceMappingURL=Site.css.map */
