Регистрация заработала в черновом варианте

--- a/spalpuGitHub/Views/Home/Index.cshtml
+++ b/spalpuGitHub/Views/Home/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@{
     ViewBag.Title = "СФА";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 @section aside{
     <div class="panel panel-default">
