--- a/spalpuGitHub/Views/Account/Action.cshtml
+++ b/spalpuGitHub/Views/Account/Action.cshtml
@@ -4,5 +4,14 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Action</h2>
+@section aside{
+    <div class="panel panel-default">
+        
+    </div>
+}
+@section article{
+    <div class="panel panel-default">
+        
+    </div>
+}
 
